policies/templates/gcp_gke_node_auto_repair_v1.yaml
# Copyright 2019 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# Check to see if auto repair is disabled on node pool.
# https://cloud.google.com/kubernetes-engine/docs/how-to/node-auto-repair

apiVersion: templates.gatekeeper.sh/v1alpha1
kind: ConstraintTemplate
metadata:
  name: gcp-gke-node-auto-repair-v1
spec:
  crd:
    spec:
      names:
        kind: GCPGKENodeAutoRepairConstraintV1
      validation:
        openAPIV3Schema:
          properties: {}
  targets:
    validation.gcp.forsetisecurity.org:
      rego: | #INLINE("validator/gke_node_auto_repair.rego")
            #
            # Copyright 2018 Google LLC
            #
            # Licensed under the Apache License, Version 2.0 (the "License");
            # you may not use this file except in compliance with the License.
            # You may obtain a copy of the License at
            #
            #      http://www.apache.org/licenses/LICENSE-2.0
            #
            # Unless required by applicable law or agreed to in writing, software
            # distributed under the License is distributed on an "AS IS" BASIS,
            # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
            # See the License for the specific language governing permissions and
            # limitations under the License.
            #
            
            package templates.gcp.GCPGKENodeAutoRepairConstraintV1
            
            import data.validator.gcp.lib as lib
            
            deny[{
            	"msg": message,
            	"details": metadata,
            }] {
            	constraint := input.constraint
            	asset := input.asset
            	asset.asset_type == "container.googleapis.com/Cluster"
            
            	container := asset.resource.data
            	node_pools := lib.get_default(container, "nodePools", [])
            	node_pool := node_pools[_]
            	not auto_repair_enabled(node_pool)
            	ancestry_path = lib.get_default(asset, "ancestry_path", "")
            
            	message := sprintf("Auto repair is not enabled on node pool '%v'.", [node_pool.name])
            
            	metadata := {"resource": asset.name, "node_pool": node_pool.name, "ancestry_path": ancestry_path}
            }
            
            ###########################
            # Rule Utilities
            ###########################
            auto_repair_enabled(node_pool) {
            	management := lib.get_default(node_pool, "management", {})
            	auto_repair_enabled := lib.get_default(management, "autoRepair", false)
            	auto_repair_enabled == true
            }
            #ENDINLINE
